Roles and Entities
Seeded "Author" and "Admin" role. A commenter can simply be any valid
logged in user. No need for a "User" role.
Closes #2

Created an Article and Comment class with basic properties and navigation
properties to one another. Entity framework DbSets added and dB migration
added. Upen Nuget Package Manager Console and run command
"Update-Database".
Closes #4

--- a/.gitignore
+++ b/.gitignore
@@ -128,8 +128,8 @@ UpgradeLog*.XML
 UpgradeLog*.htm
 
 # SQL Server files
-App_Data/*.mdf
-App_Data/*.ldf
+DevBlog/App_Data/*.mdf
+DevBlog/App_Data/*.ldf
 
 
 #LightSwitch generated files
